# jet-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  prompts.py  pyproject.toml  requirements.txt  web.py
jet/: prompts.py  web.py
jet/prompts/: prompts.py
jet/tabs/: __init__.py  chat.py  speech.py  writing.py
jet/utils/: __init__.py  chat_utils.py  db_utils.py  persist_utils.py  whisper_utils.py
