[tool.poetry]
name = "jet"
version = "0.1.0"
description = ""
authors = ["Volltin <volltin@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.0"
langchain = "^0.0.286"
gradio = "^3.43.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
